--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
 		"husky": "^8.0.0",
 		"lint-staged": "13.2.2",
 		"markdownlint": "0.28.2",
+		"sass": "1.62.1",
 		"stylelint": "15.6.0",
 		"stylelint-config-standard-scss": "9.0.0",
 		"stylelint-order": "6.0.3",
