--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,7 +1,16 @@
 {
-	"extends": ["stylelint-config-standard-scss"],
-	"plugins": ["stylelint-order"],
+	"plugins": ["stylelint-order", "stylelint-prettier"],
+	"extends": [
+		"stylelint-config-standard-scss",
+		"stylelint-prettier/recommended"
+	],
 	"rules": {
+		"prettier/prettier": [
+			true,
+			{
+				"endOfLine": "auto"
+			}
+		],
 		"indentation": "tab",
 		"declaration-no-important": true,
 		"selector-id-pattern": "^[a-z]([-]?[a-z0-9]+)*(__[a-z0-9]([-]?[a-z0-9]+)*)?(--[a-z0-9]([-]?[a-z0-9]+)*)?$",
@@ -10,7 +19,7 @@
 		"function-comma-space-after": "always",
 		"selector-list-comma-newline-after": "always",
 		"block-opening-brace-space-before": "always",
-		"string-quotes": "double",
+		"string-quotes": "single",
 		"order/order": [
 			"custom-properties",
 			"dollar-variables",
@@ -33,19 +42,19 @@
 			"display",
 			"gap",
 			"grid-template",
-			"grid-area",
-			"grid-column",
-			"grid-row",
 			"grid-template-columns",
 			"grid-template-rows",
+			"grid-template-areas",
 			"grid-auto-columns",
 			"grid-auto-rows",
 			"grid-auto-flow",
+			"grid-area",
+			"grid-column",
+			"grid-row",
 			"grid-column-start",
 			"grid-column-end",
 			"grid-row-start",
 			"grid-row-end",
-			"grid-template-areas",
 
 			"flex",
 			"flex-direction",
@@ -192,32 +201,43 @@
 			"font-variant-east-asian",
 			"font-variant-position",
 			"font-variation-settings",
-
+			"writing-mode",
+			"direction",
 			"color",
 
+			"text-orientation",
 			"text-align",
-			"text-align-last",
-			"text-combine-upright",
+			"text-justify",
 			"text-decoration",
-			"text-decoration-color",
 			"text-decoration-line",
+			"text-decoration-color",
+			"text-decoration-skip",
 			"text-decoration-style",
+			"text-decoration-skip-ink",
+			"text-decoration-thickness",
+			"text-transform",
+			"text-overflow",
+			"text-shadow",
+			"text-rendering",
+			"text-indent",
+			"text-size-adjust",
+			"text-align-last",
+			"text-anchor",
+			"text-combine-upright",
 			"text-emphasis",
 			"text-emphasis-color",
 			"text-emphasis-position",
 			"text-emphasis-style",
-			"text-indent",
-			"text-justify",
-			"text-orientation",
-			"text-overflow",
-			"text-rendering",
-			"text-shadow",
-			"text-transform",
+			"text-combine-upright",
+			"text-underline-offset",
 			"text-underline-position",
+
+			"vertical-align",
 
 			"shadow-box",
 
 			"scroll-behavior",
+			"opacity",
 
 			"transition",
 			"transition-property",
@@ -228,7 +248,19 @@
 			"transform",
 			"transform-origin",
 			"transform-style",
-			"transform-box"
+			"transform-box",
+
+			"animation",
+			"animation-name",
+			"animation-duration",
+			"animation-timing-function",
+			"animation-delay",
+			"animation-iteration-count",
+			"animation-direction",
+			"animation-fill-mode",
+			"animation-play-state",
+			"animation-composition",
+			"animation-timeline"
 		],
 		"unit-allowed-list": [
 			"rem",
