--- a/package.json
+++ b/package.json
@@ -44,10 +44,12 @@
 		"husky": "^8.0.0",
 		"lint-staged": "13.2.2",
 		"markdownlint": "0.28.2",
+		"prettier": "2.8.8",
 		"sass": "1.62.1",
 		"stylelint": "15.6.0",
 		"stylelint-config-standard-scss": "9.0.0",
 		"stylelint-order": "6.0.3",
+		"stylelint-prettier": "3.0.0",
 		"typescript": "^5.0.2",
 		"vite": "^4.3.2"
 	},
