:white_check_mark: Clase N°10: Modal: evento click con JavaScript.

--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -33,14 +33,17 @@
 		],
 		"order/properties-order": [
 			"position",
+			"z-index",
+			"inset",
 			"left",
 			"top",
 			"right",
 			"bottom",
-			"z-index",
 
 			"display",
+			"overflow",
 			"gap",
+
 			"grid-template",
 			"grid-template-columns",
 			"grid-template-rows",
@@ -56,21 +59,25 @@
 			"grid-row-start",
 			"grid-row-end",
 
+			"box-sizing",
 			"flex",
-			"flex-direction",
-			"flex-wrap",
-			"flex-grow",
-			"flex-shrink",
 			"flex-basis",
+			"flex-direction",
 			"flex-flow",
+			"flex-grow",
+			"flex-wrap",
+			"flex-shrink",
 
 			"place-content",
+			"place-items",
+			"place-self",
 			"justify-content",
 			"align-content",
 			"justify-items",
 			"align-items",
 			"justify-self",
 			"align-self",
+			"order",
 
 			"content",
 
@@ -84,36 +91,37 @@
 
 			"padding",
 			"padding-block",
-			"padding-block-start",
-			"padding-block-end",
 			"padding-inline",
+			"padding-block-start",
 			"padding-inline-start",
+			"padding-block-end",
 			"padding-inline-end",
-			"padding-left",
 			"padding-top",
-			"padding-bottom",
 			"padding-right",
+			"padding-bottom",
+			"padding-left",
 
 			"border",
 			"border-radius",
-			"border-left",
 			"border-top",
-			"border-right",
+			"border-left",
 			"border-bottom",
+			"border-right",
 			"border-color",
 			"border-width",
 			"border-style",
 			"border-collapse",
 			"border-spacing",
 			"border-block",
+			"border-inline",
 			"border-image",
-			"border-bottom-left-radius",
+			"border-top-left-radius",
+			"border-top-right-radius",
 			"border-bottom-right-radius",
+			"border-bottom-left-radius",
 			"border-bottom-color",
 			"border-bottom-width",
 			"border-bottom-style",
-			"border-top-left-radius",
-			"border-top-right-radius",
 			"border-top-color",
 			"border-top-width",
 			"border-top-style",
@@ -124,7 +132,9 @@
 			"border-left-width",
 			"border-left-style",
 			"border-block-start",
+			"border-inline-end",
 			"border-block-end",
+			"border-inline-start",
 			"border-block-color",
 			"border-block-style",
 			"border-block-width",
@@ -141,9 +151,6 @@
 			"border-image-slice",
 			"border-image-source",
 			"border-image-width",
-			"border-inline",
-			"border-inline-start",
-			"border-inline-end",
 			"border-inline-color",
 			"border-inline-style",
 			"border-inline-width",
@@ -155,16 +162,16 @@
 			"border-inline-end-width",
 
 			"margin",
-			"margin-left",
 			"margin-top",
-			"margin-right",
+			"margin-left",
 			"margin-bottom",
+			"margin-right",
 			"margin-block",
-			"margin-block-start",
-			"margin-block-end",
 			"margin-inline",
-			"margin-inline-start",
+			"margin-block-start",
 			"margin-inline-end",
+			"margin-block-end",
+			"margin-inline-start",
 			"margin-trim",
 
 			"background",
@@ -263,16 +270,16 @@
 			"animation-timeline"
 		],
 		"unit-allowed-list": [
-			"rem",
-			"%",
-			"ms",
-			"deg",
 			"vh",
 			"vw",
-			"fr",
-			"em",
 			"px",
-			"s"
+			"%",
+			"fr",
+			"rem",
+			"em",
+			"deg",
+			"s",
+			"ms"
 		],
 		"scss/dollar-variable-pattern": "^^_?[a-z0-9]+(-[a-z0-9]+)*$"
 	}
