--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -17,4 +17,4 @@ jobs:
         run: npm run lint:fix
 
       - name: 💄 StyleLint
-        run: npm run stylelint
+        run: npm run stylelint:fix
