:stethoscope: Test prettier for html

--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
 	},
 	"lint-staged": {
 		"*.(j|t)s": "eslint --fix",
-		"*.s(a|c)ss": "stylelint --fix"
+		"*.s(a|c)ss": "stylelint --fix",
+		"*.html": "prettier --write"
 	},
 	"type": "module"
 }
