:white_check_mark: Clase N°11: Slider.

--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -315,7 +315,9 @@
 			"animation-fill-mode",
 			"animation-play-state",
 			"animation-composition",
-			"animation-timeline"
+			"animation-timeline",
+
+			"cursor"
 		],
 		"unit-allowed-list": [
 			"vh",
