:memo: README y modificaciones leves
Se creó el README.md del proyecto y se agregó al workflow, de GitHub Acitons, prettier para HTML.

--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
 		"lint": "eslint ./",
 		"lint:fix": "npx eslint --fix ./",
 		"stylelint": "npx stylelint \"**/*.scss\"",
-		"stylelint:fix": "npx stylelint --fix \"**/*.scss\""
+		"stylelint:fix": "npx stylelint --fix \"**/*.scss\"",
+		"prettier": "prettier --write",
+		"prettier:fix": "prettier --write *.html"
 	},
 	"repository": {
 		"type": "git",
