--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -3,18 +3,21 @@ name: 💅 Lint
 on: push
 
 jobs:
-  lint:
-    runs-on: ubuntu-latest
-    name: 💅 Lint
-    steps:
-      - name: 👍 Checkout
-        uses: actions/checkout@v2
+    lint:
+        runs-on: ubuntu-latest
+        name: 💅 Lint
+        steps:
+            - name: 👍 Checkout
+              uses: actions/checkout@v2
 
-      - name: 📥 Install Dependencies
-        run: npm install
+            - name: 📥 Install Dependencies
+              run: npm install
 
-      - name: 🌹 ESLint
-        run: npm run lint:fix
+            - name: 🌹 ESLint
+              run: npm run lint:fix
 
-      - name: 💄 StyleLint
-        run: npm run stylelint:fix
+            - name: 💄 StyleLint
+              run: npm run stylelint:fix
+
+            - name: 👕 Prettier
+              run: npm run prettier:fix
